// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schedule behavior with cron 1`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_cloudwatch_event_rule": {
      "Schedule_15669BF1": {
        "is_enabled": true,
        "schedule_expression": "cron(0/1 * ? * * *)",
      },
    },
    "aws_cloudwatch_event_target": {
      "Schedule_ScheduleTarget-2_9AF20D0D": {
        "arn": "\${aws_lambda_function.Schedule-OnTick-2.qualified_arn}",
        "rule": "\${aws_cloudwatch_event_rule.Schedule_15669BF1.name}",
      },
    },
    "aws_cloudwatch_log_group": {
      "Schedule-OnTick-2_CloudwatchLogGroup_C7222DD7": {
        "name": "/aws/lambda/Schedule-OnTick-2-c86d49c3",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "Schedule-OnTick-2_IamRole_AB6BE616": {
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Schedule-OnTick-2_IamRolePolicy_5CE94FFD": {
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.Schedule-OnTick-2_IamRole_AB6BE616.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Schedule-OnTick-2_IamRolePolicyAttachment_464EEBA9": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Schedule-OnTick-2_IamRole_AB6BE616.name}",
      },
    },
    "aws_lambda_function": {
      "Schedule-OnTick-2": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Schedule-OnTick-2-c86d49c3",
          },
        },
        "function_name": "Schedule-OnTick-2-c86d49c3",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Schedule-OnTick-2_IamRole_AB6BE616.arn}",
        "runtime": "nodejs18.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Schedule-OnTick-2_S3Object_D574B7F8.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_lambda_permission": {
      "Schedule-OnTick-2_InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3_361C6EE6": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.Schedule-OnTick-2.function_name}",
        "principal": "events.amazonaws.com",
        "qualifier": "\${aws_lambda_function.Schedule-OnTick-2.version}",
        "source_arn": "\${aws_cloudwatch_event_rule.Schedule_15669BF1.arn}",
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "Schedule-OnTick-2_S3Object_D574B7F8": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
  },
}
`;

exports[`schedule behavior with cron 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "Code",
                "path": "root/Default/Code",
              },
              "Schedule": {
                "children": {
                  "Schedule": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Schedule",
                    "path": "root/Default/Schedule/Schedule",
                  },
                  "ScheduleTarget-2": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "ScheduleTarget-2",
                    "path": "root/Default/Schedule/ScheduleTarget-2",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A cloud schedule to trigger events at regular intervals",
                  "title": "Schedule",
                },
                "id": "Schedule",
                "path": "root/Default/Schedule",
              },
              "Schedule-OnTick-2": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.17.0",
                    },
                    "id": "Asset",
                    "path": "root/Default/Schedule-OnTick-2/Asset",
                  },
                  "CloudwatchLogGroup": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "CloudwatchLogGroup",
                    "path": "root/Default/Schedule-OnTick-2/CloudwatchLogGroup",
                  },
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Default",
                    "path": "root/Default/Schedule-OnTick-2/Default",
                  },
                  "IamRole": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Schedule-OnTick-2/IamRole",
                  },
                  "IamRolePolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Schedule-OnTick-2/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Schedule-OnTick-2/IamRolePolicyAttachment",
                  },
                  "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                    "path": "root/Default/Schedule-OnTick-2/InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                  },
                  "S3Object": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "S3Object",
                    "path": "root/Default/Schedule-OnTick-2/S3Object",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Schedule-OnTick-2",
                "path": "root/Default/Schedule-OnTick-2",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`schedule behavior with rate 1`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_cloudwatch_event_rule": {
      "Schedule_15669BF1": {
        "is_enabled": true,
        "schedule_expression": "rate(2 minutes)",
      },
    },
    "aws_cloudwatch_event_target": {
      "Schedule_ScheduleTarget-0_0AFE3B77": {
        "arn": "\${aws_lambda_function.Schedule-OnTick-0.qualified_arn}",
        "rule": "\${aws_cloudwatch_event_rule.Schedule_15669BF1.name}",
      },
    },
    "aws_cloudwatch_log_group": {
      "Schedule-OnTick-0_CloudwatchLogGroup_750C16A9": {
        "name": "/aws/lambda/Schedule-OnTick-0-c8e326d0",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "Schedule-OnTick-0_IamRole_79A6CE7B": {
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Schedule-OnTick-0_IamRolePolicy_86056132": {
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.Schedule-OnTick-0_IamRole_79A6CE7B.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Schedule-OnTick-0_IamRolePolicyAttachment_C6ADDA50": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Schedule-OnTick-0_IamRole_79A6CE7B.name}",
      },
    },
    "aws_lambda_function": {
      "Schedule-OnTick-0": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Schedule-OnTick-0-c8e326d0",
          },
        },
        "function_name": "Schedule-OnTick-0-c8e326d0",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Schedule-OnTick-0_IamRole_79A6CE7B.arn}",
        "runtime": "nodejs18.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Schedule-OnTick-0_S3Object_FDE36DA7.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_lambda_permission": {
      "Schedule-OnTick-0_InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3_A9D00597": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.Schedule-OnTick-0.function_name}",
        "principal": "events.amazonaws.com",
        "qualifier": "\${aws_lambda_function.Schedule-OnTick-0.version}",
        "source_arn": "\${aws_cloudwatch_event_rule.Schedule_15669BF1.arn}",
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "Schedule-OnTick-0_S3Object_FDE36DA7": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
  },
}
`;

exports[`schedule behavior with rate 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "Code",
                "path": "root/Default/Code",
              },
              "Schedule": {
                "children": {
                  "Schedule": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Schedule",
                    "path": "root/Default/Schedule/Schedule",
                  },
                  "ScheduleTarget-0": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "ScheduleTarget-0",
                    "path": "root/Default/Schedule/ScheduleTarget-0",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A cloud schedule to trigger events at regular intervals",
                  "title": "Schedule",
                },
                "id": "Schedule",
                "path": "root/Default/Schedule",
              },
              "Schedule-OnTick-0": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.17.0",
                    },
                    "id": "Asset",
                    "path": "root/Default/Schedule-OnTick-0/Asset",
                  },
                  "CloudwatchLogGroup": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "CloudwatchLogGroup",
                    "path": "root/Default/Schedule-OnTick-0/CloudwatchLogGroup",
                  },
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Default",
                    "path": "root/Default/Schedule-OnTick-0/Default",
                  },
                  "IamRole": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Schedule-OnTick-0/IamRole",
                  },
                  "IamRolePolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Schedule-OnTick-0/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Schedule-OnTick-0/IamRolePolicyAttachment",
                  },
                  "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                    "path": "root/Default/Schedule-OnTick-0/InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                  },
                  "S3Object": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "S3Object",
                    "path": "root/Default/Schedule-OnTick-0/S3Object",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Schedule-OnTick-0",
                "path": "root/Default/Schedule-OnTick-0",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`schedule with two functions 1`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_cloudwatch_event_rule": {
      "Schedule_15669BF1": {
        "is_enabled": true,
        "schedule_expression": "cron(0/1 * ? * * *)",
      },
    },
    "aws_cloudwatch_event_target": {
      "Schedule_ScheduleTarget-4_9C1E0829": {
        "arn": "\${aws_lambda_function.Schedule-OnTick-4.qualified_arn}",
        "rule": "\${aws_cloudwatch_event_rule.Schedule_15669BF1.name}",
      },
      "Schedule_ScheduleTarget-5_90FEE898": {
        "arn": "\${aws_lambda_function.Schedule-OnTick-5.qualified_arn}",
        "rule": "\${aws_cloudwatch_event_rule.Schedule_15669BF1.name}",
      },
    },
    "aws_cloudwatch_log_group": {
      "Schedule-OnTick-4_CloudwatchLogGroup_9A14EC4C": {
        "name": "/aws/lambda/Schedule-OnTick-4-c86e42e6",
        "retention_in_days": 30,
      },
      "Schedule-OnTick-5_CloudwatchLogGroup_E8B3DF07": {
        "name": "/aws/lambda/Schedule-OnTick-5-c8ffcaaa",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "Schedule-OnTick-4_IamRole_1533F399": {
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
      "Schedule-OnTick-5_IamRole_A814E0A5": {
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Schedule-OnTick-4_IamRolePolicy_660D4CEF": {
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.Schedule-OnTick-4_IamRole_1533F399.name}",
      },
      "Schedule-OnTick-5_IamRolePolicy_1302A6D3": {
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.Schedule-OnTick-5_IamRole_A814E0A5.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Schedule-OnTick-4_IamRolePolicyAttachment_AD7D7EBF": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Schedule-OnTick-4_IamRole_1533F399.name}",
      },
      "Schedule-OnTick-5_IamRolePolicyAttachment_B6A17C75": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Schedule-OnTick-5_IamRole_A814E0A5.name}",
      },
    },
    "aws_lambda_function": {
      "Schedule-OnTick-4": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Schedule-OnTick-4-c86e42e6",
          },
        },
        "function_name": "Schedule-OnTick-4-c86e42e6",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Schedule-OnTick-4_IamRole_1533F399.arn}",
        "runtime": "nodejs18.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Schedule-OnTick-4_S3Object_E438A8BF.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
      "Schedule-OnTick-5": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Schedule-OnTick-5-c8ffcaaa",
          },
        },
        "function_name": "Schedule-OnTick-5-c8ffcaaa",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Schedule-OnTick-5_IamRole_A814E0A5.arn}",
        "runtime": "nodejs18.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Schedule-OnTick-5_S3Object_173701DC.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_lambda_permission": {
      "Schedule-OnTick-4_InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3_5A77E3DB": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.Schedule-OnTick-4.function_name}",
        "principal": "events.amazonaws.com",
        "qualifier": "\${aws_lambda_function.Schedule-OnTick-4.version}",
        "source_arn": "\${aws_cloudwatch_event_rule.Schedule_15669BF1.arn}",
      },
      "Schedule-OnTick-5_InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3_17C83979": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.Schedule-OnTick-5.function_name}",
        "principal": "events.amazonaws.com",
        "qualifier": "\${aws_lambda_function.Schedule-OnTick-5.version}",
        "source_arn": "\${aws_cloudwatch_event_rule.Schedule_15669BF1.arn}",
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "Schedule-OnTick-4_S3Object_E438A8BF": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
      "Schedule-OnTick-5_S3Object_173701DC": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
  },
}
`;

exports[`schedule with two functions 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "Code",
                "path": "root/Default/Code",
              },
              "Schedule": {
                "children": {
                  "Schedule": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Schedule",
                    "path": "root/Default/Schedule/Schedule",
                  },
                  "ScheduleTarget-4": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "ScheduleTarget-4",
                    "path": "root/Default/Schedule/ScheduleTarget-4",
                  },
                  "ScheduleTarget-5": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "ScheduleTarget-5",
                    "path": "root/Default/Schedule/ScheduleTarget-5",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A cloud schedule to trigger events at regular intervals",
                  "title": "Schedule",
                },
                "id": "Schedule",
                "path": "root/Default/Schedule",
              },
              "Schedule-OnTick-4": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.17.0",
                    },
                    "id": "Asset",
                    "path": "root/Default/Schedule-OnTick-4/Asset",
                  },
                  "CloudwatchLogGroup": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "CloudwatchLogGroup",
                    "path": "root/Default/Schedule-OnTick-4/CloudwatchLogGroup",
                  },
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Default",
                    "path": "root/Default/Schedule-OnTick-4/Default",
                  },
                  "IamRole": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Schedule-OnTick-4/IamRole",
                  },
                  "IamRolePolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Schedule-OnTick-4/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Schedule-OnTick-4/IamRolePolicyAttachment",
                  },
                  "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                    "path": "root/Default/Schedule-OnTick-4/InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                  },
                  "S3Object": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "S3Object",
                    "path": "root/Default/Schedule-OnTick-4/S3Object",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Schedule-OnTick-4",
                "path": "root/Default/Schedule-OnTick-4",
              },
              "Schedule-OnTick-5": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.17.0",
                    },
                    "id": "Asset",
                    "path": "root/Default/Schedule-OnTick-5/Asset",
                  },
                  "CloudwatchLogGroup": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "CloudwatchLogGroup",
                    "path": "root/Default/Schedule-OnTick-5/CloudwatchLogGroup",
                  },
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Default",
                    "path": "root/Default/Schedule-OnTick-5/Default",
                  },
                  "IamRole": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Schedule-OnTick-5/IamRole",
                  },
                  "IamRolePolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Schedule-OnTick-5/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Schedule-OnTick-5/IamRolePolicyAttachment",
                  },
                  "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                    "path": "root/Default/Schedule-OnTick-5/InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                  },
                  "S3Object": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "S3Object",
                    "path": "root/Default/Schedule-OnTick-5/S3Object",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Schedule-OnTick-5",
                "path": "root/Default/Schedule-OnTick-5",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
